# betting

./: .gitignore  Latest_Results.csv  NoteGPT_Why Tony Bloom is the most valuable asset in football.txt  README.md  fixtures.csv  pyproject.toml  streamlit_app.py  tmp_edit.py
config/: competitions.yml
data/: B1.csv  D1.csv  D2.csv  E0.csv  E1.csv  E2.csv  E3.csv  EC.csv  F1.csv  F2.csv  G1.csv  I1.csv  I2.csv  N1.csv  P1.csv  SC0.csv  SC1.csv  SC2.csv  SC3.csv  SP1.csv  SP2.csv  T1.csv  league_api_map.csv  league_api_map.csv.bak  team_strength_baselines.csv
docs/: schema.md
scripts/: log_league_metrics.py  run_preview.ps1  run_preview.py
src/eval/: backtest.py  draw_calibration.py
src/integrations/: api_football.py
src/io/: enrich_euro_domestic.py  fetch_api_fixtures.py  fetch_closing_odds.py  fetch_fixture_details.py  fetch_fixtures.py  fetch_missing_odds.py  fetch_odds.py  fetch_results.py  fetch_team_strength.py  fetch_upcoming_lineups.py  loaders.py
src/ratings/: elo.py  pipeline.py  pipeline.py.bak  xg.py
tests/: test_ratings.py
