[project]
name = "betting-new"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.32",
    "pyyaml>=6.0",
    "scikit-learn>=1.4"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
package-mode = false
